Fixing alerts overflow

--- a/src/components/AlertBadge/styles.css
+++ b/src/components/AlertBadge/styles.css
@@ -7,7 +7,7 @@
   display: flex;
   font-family: var(--defaultFont);
   margin: 1vh;
-  height: 64px;
+  height: 75px;
   color: var(--dark);
   font-size: 14px;
   font-weight: 500;
@@ -19,7 +19,7 @@
   border-radius: 7px 0 0 7px;
   display: flex;
   justify-content: center;
-  height: 64px;
+  height: 100%;
   width: 61px;
 }
 
@@ -36,4 +36,3 @@
   color: orange;
   text-align: left;
 }
-
